pxc/tests/test_003_interface/constr2.px
namespace constr2;
import common -;

interface ifoo {
  function void m();
}

struct foo < ifoo > {
  function void m() { println("hoge"); }
}

function void t1() {
  ptr{ifoo} p = to_ptr{ifoo}(foo()); // error
}

